change width of nav-side, nav-list and hide the app logo on tablet view for fixing responsive issue

--- a/src/components/container/styles/_main.scss
+++ b/src/components/container/styles/_main.scss
@@ -15,7 +15,7 @@ div.container {
 	}
 }
 
-@media screen and (min-width: 992px) and (max-width: 1366px) {
+@media screen and (max-width: 1366px) {
 	div.container {
 		max-width: 90%;
 	}
