--- a/src/components/navbar/styles/_media-queries.scss
+++ b/src/components/navbar/styles/_media-queries.scss
@@ -273,114 +273,33 @@
 	}
 }
 
-// Small Laptop
-// @media screen and (min-width: 992px) and (max-width: 1200px) {
-// 	div.hero {
-// 		nav.navbar {
-// 			position: relative;
-	
-// 			div.nav-flex {
-// 				div.nav-side {
-// 					display: none;
-// 				}
-
-// 				div.burger {
-// 					display: block;
-// 				}
-	
-// 				figure.nav-brand {
-// 					width: 100%;
-
-// 					& > img.nav-brand-img {
-// 						width: 1.8rem;
-// 					}
-// 				}
-	
-// 				ul.nav-list {
-// 					display: none;
-// 					width: 100%;
-// 					position: fixed;
-// 					left: 0;
-// 					right: 0;
-// 					top: 4.5rem;
-
-// 					li.nav-footer {
-// 						height: auto !important;
-// 						padding: 2rem 0;
-// 						display: flex !important;
-// 					}
-
-// 					li.nav-items {
-// 						&-register {
-// 							display: flex !important;
-// 						}
-	
-// 						&-login {
-// 							display: flex !important;
-// 						}
-
-// 						&-profile,
-// 						&-message {
-// 							display: flex !important;
-// 						}
-
-// 						&-search-bar {
-// 							display: flex !important;
-// 						}
-// 					}
-					
-// 					li.nav-items, 
-// 					li.nav-footer {
-// 						width: 100%;
-// 						margin-right: 0;
-// 						height: 4rem;
-// 						display: flex;
-// 						align-items: center;
-// 						border-top: 1px solid $gray;
-// 						background-color: white;
-
-// 						&:first-child {
-// 							border-top: none;
-// 						}
-
-// 						& > p.nav-link {
-// 							font-size: .9rem;
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
-
-// 		span.hero-container {
-// 			display: inline-block;
-// 			position: fixed;
-// 			top: 0;
-// 			bottom: 0;
-// 			left: 0;
-// 			right: 0;
-// 			background-color: rgba(0, 0, 0, 0.5);
-// 			z-index: 4;
-// 		}
-// 	}
-// }
-
 @media screen and (min-width: 992px) and (max-width: 1200px) {
 	nav.navbar {
 		div.nav-flex {
 			figure.nav-brand {
 				width: 19% !important;
+
+				& > figcaption.nav-brand-text {
+					font-size: 1.3rem !important;
+					margin-left: 0 !important;
+				}
+
+				& > img.nav-brand-img {
+					display: none;
+				}
 			}
 
 			ul.nav-list {
-				width: 48% !important;
+				width: 46% !important;
+				justify-content: center !important;
 
 				li.nav-items {
-					margin-right: 2.5rem !important;
+					margin-right: 2rem !important;
 				}
 			}
 
 			div.nav-side {
-				width: 33% !important;
+				width: 35% !important;
 
 				div.control {
 					margin-right: 1.5rem !important; 
